// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> renders default variant 1`] = `
<nav
  aria-label="pagination navigation"
  className="pagination-default"
>
  <div
    aria-atomic={true}
    aria-live="polite"
    aria-relevant="text"
    className="sr-only"
  >
    Page 1, Current Page, of 5
  </div>
  <ul
    className="pagination"
  >
    <li
      className="page-item disabled"
    >
      <button
        aria-label="Previous"
        className="previous page-link btn btn-tertiary"
        disabled={true}
        onClick={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="pgn__icon btn-icon-before"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
              fill="currentColor"
            />
          </svg>
        </span>
        Previous
      </button>
    </li>
    <li
      className="page-item active"
    >
      <button
        aria-label="Page 1, Current Page"
        className="page-link btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        1
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 2"
        className="page-link btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        2
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 3"
        className="page-link btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        3
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 4"
        className="page-link btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        4
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 5"
        className="page-link btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        5
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Next, Page 2"
        className="previous page-link btn btn-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Next
        <span
          className="pgn__icon btn-icon-after"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> renders with inverse colors 1`] = `
<nav
  aria-label="pagination navigation"
  className="pagination-default pagination-inverse"
>
  <div
    aria-atomic={true}
    aria-live="polite"
    aria-relevant="text"
    className="sr-only"
  >
    Page 1, Current Page, of 5
  </div>
  <ul
    className="pagination"
  >
    <li
      className="page-item disabled"
    >
      <button
        aria-label="Previous"
        className="previous page-link btn btn-inverse-tertiary"
        disabled={true}
        onClick={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="pgn__icon btn-icon-before"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
              fill="currentColor"
            />
          </svg>
        </span>
        Previous
      </button>
    </li>
    <li
      className="page-item active"
    >
      <button
        aria-label="Page 1, Current Page"
        className="page-link btn btn-inverse-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        1
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 2"
        className="page-link btn btn-inverse-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        2
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 3"
        className="page-link btn btn-inverse-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        3
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 4"
        className="page-link btn btn-inverse-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        4
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Page 5"
        className="page-link btn btn-inverse-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        5
      </button>
    </li>
    <li
      className="page-item"
    >
      <button
        aria-label="Next, Page 2"
        className="previous page-link btn btn-inverse-tertiary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Next
        <span
          className="pgn__icon btn-icon-after"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </li>
  </ul>
</nav>
`;
